# cli-voicebox

./: .gitignore  README.md  pyproject.toml
cli_voicebox/: __init__.py  __main__.py  client.py  config.example.json  config.py  help_text.py  main.py  output.py  user_paths.py
cli_voicebox/commands/: audio.py  generate.py  health.py  history.py  init_cmd.py  models.py  profiles.py
